# pidgin-fchat

./: .gitignore  CMakeLists.txt  Makefile  README.md
debian/: changelog  control  copyright  dirs  rules
po/: messages.pot  ru.po
share/i18n/: fchat.pot
share/pixmaps/: fchat.orig.32.xpm
src/: actions.c  attention.c  buddy.c  chat.c  connection.c  fchat.c  fchat.h  info.c  process_cmds.c  send_cmds.c  status.c
